Edit index.html di conflict-branch

--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 <h3>ini dari branch feature-1-branch ya dibuatnya</h3>
 <h4>ini dari branch feature-2-branch - coba lagi</h4>
 <h5>ini dari branch feature-2-branch juga sedang coba lagi</h5>
+<h1>Halo dari conflict-branch</h1>
